@@ -1612,9 +1612,9 @@ void SetRecommendedSettings()
   CheckDlgButton(h,IDC_ASKPW,0);
   SetDlgItemInt(h,IDC_ASKTIMEOUT,0,0);
   ComboBox_SetCurSel(GetDlgItem(h,IDC_WARNADMIN),APW_NR_SR_ADMIN);
-  CheckDlgButton(h,IDC_CTRLASADMIN,1/*IsWin7==0*/);
+  CheckDlgButton(h,IDC_CTRLASADMIN,1/*IsWin7pp==0*/);
   CheckDlgButton(h,IDC_CMDASADMIN,0);
-  CheckDlgButton(h,IDC_EXPASADMIN,1/*IsWin7==0*/);
+  CheckDlgButton(h,IDC_EXPASADMIN,1/*IsWin7pp==0*/);
   CheckDlgButton(h,IDC_RESTARTADMIN,1);
   CheckDlgButton(h,IDC_STARTADMIN,0);
   EnableWindow(GetDlgItem(h,IDC_FADEDESKTOP),!IsWin2k);
